made some changes in PLP

--- a/PLP.html
+++ b/PLP.html
@@ -59,7 +59,12 @@
           <img class="filter-arrow-btn" src="images/filter_arrow.png" alt="" />
         </div>
         <div class="line"></div>
-        <div class="price-filter"><p>Price Range</p></div>
+        <div class="price-filter">
+          <p>Price Range</p>
+          <div class="slider">
+            <input type="range" min="" max="" value="" class="" id="" />
+          </div>
+        </div>
         <div class="line"></div>
       </div>
 
