--- a/PLP.html
+++ b/PLP.html
@@ -22,8 +22,8 @@
       </select>
     </div>
 
-    <div class="wrapper">
-      <div class="sidebar">
+    <section>
+      <aside>
         <span class="sidebar-filter-text">Filter by</span>
 
         <div class="collection-filter">
@@ -66,97 +66,140 @@
           </div>
         </div>
         <div class="line"></div>
-      </div>
+      </aside>
 
-      <div class="products-container">
-        <!-- product -->
-        <div class="product">
-          <div class="product-image">
-            <img src="images/product-image-1.jpg" alt="picture of a bedroom" />
+      <div class="container">
+        <div class="products">
+          <!-- product -->
+          <div class="product">
+            <img
+              class="product-image"
+              src="images/product-image-1.jpg"
+              alt="picture of a bedroom"
+            />
+            <div class="product-info">
+              <div class="product-name">
+                <h4>Druid</h4>
+              </div>
+              <div class="product-extra-info">
+                <p>Sofa</p>
+                <p>$1,345</p>
+              </div>
+            </div>
+            <div class="product-add-to-cart">
+              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
+            </div>
           </div>
-          <div class="product-name">
-            <h2>Druid</h2>
-            <p class="product-category-text">Sofa</p>
+          <!-- product -->
+          <div class="product">
+            <img
+              class="product-image"
+              src="images/product-image-1.jpg"
+              alt="picture of a bedroom"
+            />
+            <div class="product-info">
+              <div class="product-name">
+                <h4>Druid</h4>
+                <div class="product-extra-info">
+                  <p>Sofa</p>
+                  <p>$1,345</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-add-to-cart">
+              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
+            </div>
           </div>
-          <div class="product-price">$1,345</div>
-          <div class="product-add-to-cart">
-            <img src="images/add-to-cart-button.png" alt="" />
-          </div>
-        </div>
-        <!-- product -->
-        <div class="product">
-          <div class="product-image">
-            <img src="images/product-image-1.jpg" alt="picture of a bedroom" />
-          </div>
-          <div class="product-name">
-            <h2>Druid</h2>
-            <p class="product-category-text">Sofa</p>
-          </div>
-          <div class="product-price">$45</div>
-          <div class="product-add-to-cart">
-            <img src="images/add-to-cart-button.png" alt="" />
-          </div>
-        </div>
 
-        <div class="product">
-          <div class="product-image">
-            <img src="images/product-image-1.jpg" alt="picture of a bedroom" />
+          <div class="product">
+            <img
+              class="product-image"
+              src="images/product-image-1.jpg"
+              alt="picture of a bedroom"
+            />
+            <div class="product-info">
+              <div class="product-name">
+                <h4>Druid</h4>
+                <div class="product-extra-info">
+                  <p>Sofa</p>
+                  <p>$1,345</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-add-to-cart">
+              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
+            </div>
           </div>
-          <div class="product-name">
-            <h2>Druid</h2>
-            <p class="product-category-text">Sofa</p>
-          </div>
-          <div class="product-price">$1,345</div>
-          <div class="product-add-to-cart">
-            <img src="images/add-to-cart-button.png" alt="" />
-          </div>
-        </div>
 
-        <div class="product">
-          <div class="product-image">
-            <img src="images/product-image-1.jpg" alt="picture of a bedroom" />
+          <div class="product">
+            <img
+              class="product-image"
+              src="images/product-image-1.jpg"
+              alt="picture of a bedroom"
+            />
+            <div class="product-info">
+              <div class="product-name">
+                <h4>Druid</h4>
+                <div class="product-extra-info">
+                  <p>Sofa</p>
+                  <p>$1,345</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-add-to-cart">
+              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
+            </div>
           </div>
-          <div class="product-name">
-            <h2>Druid</h2>
-            <p class="product-category-text">Sofa</p>
+          <div class="product">
+            <img
+              class="product-image"
+              src="images/product-image-1.jpg"
+              alt="picture of a bedroom"
+            />
+            <div class="product-info">
+              <div class="product-name">
+                <h4>Druid</h4>
+                <div class="product-extra-info">
+                  <p>Sofa</p>
+                  <p>$1,345</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-add-to-cart">
+              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
+            </div>
           </div>
-          <div class="product-price">$1,345</div>
-          <div class="product-add-to-cart">
-            <img src="images/add-to-cart-button.png" alt="" />
-          </div>
-        </div>
 
-        <div class="product">
-          <div class="product-image">
-            <img src="images/product-image-1.jpg" alt="picture of a bedroom" />
-          </div>
-          <div class="product-name">
-            <h2>Druid</h2>
-            <p class="product-category-text">Sofa</p>
-          </div>
-          <div class="product-price">$1,345</div>
-          <div class="product-add-to-cart">
-            <img src="images/add-to-cart-button.png" alt="" />
-          </div>
-        </div>
-
-        <div class="product">
-          <div class="product-image">
-            <img src="images/product-image-1.jpg" alt="picture of a bedroom" />
-          </div>
-          <div class="product-name">
-            <h2>Druid</h2>
-            <p class="product-category-text">Sofa</p>
-          </div>
-          <div class="product-price">$345</div>
-          <div class="product-add-to-cart">
-            <img src="images/add-to-cart-button.png" alt="" />
+          <div class="product">
+            <img
+              class="product-image"
+              src="images/product-image-1.jpg"
+              alt="picture of a bedroom"
+            />
+            <div class="product-info">
+              <div class="product-name">
+                <h4>Druid</h4>
+                <div class="product-extra-info">
+                  <p>Sofa</p>
+                  <p>$1,345</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-add-to-cart">
+              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
+            </div>
           </div>
         </div>
+        <ul class="pagination">
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>5</li>
+        </ul>
       </div>
       <!-- products container-->
-    </div>
-    <!-- wrapper-->
+    </section>
 
     <div class="hr-line"></div>
 
