Split js and include in pages.

--- a/PDP.html
+++ b/PDP.html
@@ -68,6 +68,7 @@
 
     <footer></footer>
     <script src="products.js"></script>
-    <script src="index.js"></script>
+    <script src="common.js"></script>
+    <script src="pdp.js"></script>
   </body>
 </html>
