--- a/PLP.html
+++ b/PLP.html
@@ -228,6 +228,7 @@
 
     <footer></footer>
     <script src="products.js"></script>
-    <script src="index.js"></script>
+    <script src="common.js"></script>
+    <script src="plp.js"></script>
   </body>
 </html>
