--- a/main_page.html
+++ b/main_page.html
@@ -49,6 +49,7 @@
     <!-- main-page-container -->
 
     <script src="products.js"></script>
-    <script src="index.js"></script>
+    <script src="common.js"></script>
+    <script src="main_page.js"></script>
   </body>
 </html>
