--- a/PLP.html
+++ b/PLP.html
@@ -93,7 +93,7 @@
       <div class="container">
         <div class="products">
           <!-- product -->
-          <div class="product">
+          <div class="product template">
             <img
               class="product-image"
               src="images/product-image-1.jpg"
@@ -104,8 +104,8 @@
                 <h4>Druid</h4>
               </div>
               <div class="product-extra-info">
-                <p class="gray-text">Sofa</p>
-                <p>$1,345</p>
+                <p class="gray-text product-type">Sofa</p>
+                <p class="product-price">$1,345</p>
               </div>
             </div>
             <div class="product-add-to-cart">
@@ -113,105 +113,6 @@
             </div>
           </div>
           <!-- product -->
-          <div class="product">
-            <img
-              class="product-image"
-              src="images/product-image-1.jpg"
-              alt="picture of a bedroom"
-            />
-            <div class="product-info">
-              <div class="product-name">
-                <h4>Druid</h4>
-              </div>
-              <div class="product-extra-info">
-                <p class="gray-text">Sofa</p>
-                <p>$1,345</p>
-              </div>
-            </div>
-            <div class="product-add-to-cart">
-              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
-            </div>
-          </div>
-
-          <div class="product">
-            <img
-              class="product-image"
-              src="images/product-image-1.jpg"
-              alt="picture of a bedroom"
-            />
-            <div class="product-info">
-              <div class="product-name">
-                <h4>Druid</h4>
-              </div>
-              <div class="product-extra-info">
-                <p class="gray-text">Sofa</p>
-                <p>$1,345</p>
-              </div>
-            </div>
-            <div class="product-add-to-cart">
-              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
-            </div>
-          </div>
-
-          <div class="product">
-            <img
-              class="product-image"
-              src="images/product-image-1.jpg"
-              alt="picture of a bedroom"
-            />
-            <div class="product-info">
-              <div class="product-name">
-                <h4>Druid</h4>
-              </div>
-              <div class="product-extra-info">
-                <p class="gray-text">Sofa</p>
-                <p>$1,345</p>
-              </div>
-            </div>
-            <div class="product-add-to-cart">
-              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
-            </div>
-          </div>
-
-          <div class="product">
-            <img
-              class="product-image"
-              src="images/product-image-1.jpg"
-              alt="picture of a bedroom"
-            />
-            <div class="product-info">
-              <div class="product-name">
-                <h4>Druid</h4>
-              </div>
-              <div class="product-extra-info">
-                <p class="gray-text">Sofa</p>
-                <p>$1,345</p>
-              </div>
-            </div>
-            <div class="product-add-to-cart">
-              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
-            </div>
-          </div>
-
-          <div class="product">
-            <img
-              class="product-image"
-              src="images/product-image-1.jpg"
-              alt="picture of a bedroom"
-            />
-            <div class="product-info">
-              <div class="product-name">
-                <h4>Druid</h4>
-              </div>
-              <div class="product-extra-info">
-                <p class="gray-text">Sofa</p>
-                <p>$1,345</p>
-              </div>
-            </div>
-            <div class="product-add-to-cart">
-              <a href=""><img src="images/add-to-cart-button.png" alt="" /></a>
-            </div>
-          </div>
         </div>
         <ul class="pagination">
           <li class="page">1</li>
