Small touches, todo

--- a/PLP.html
+++ b/PLP.html
@@ -115,11 +115,7 @@
           <!-- product -->
         </div>
         <ul class="pagination">
-          <li class="page">1</li>
-          <li class="page">2</li>
-          <li class="page">3</li>
-          <li class="page">4</li>
-          <li class="page">5</li>
+          <!-- <li class="page">1</li> -->
         </ul>
       </div>
       <!-- products container-->
