--- a/PLP.html
+++ b/PLP.html
@@ -16,9 +16,9 @@
 
       <label for="sorting"></label>
       <select id="sorting">
-        <option>Best Match</option>
-        <option>Low to High</option>
-        <option>High to Low</option>
+        <option value="best-match">Best Match</option>
+        <option value="low-to-high">Low to High</option>
+        <option value="high-to-low">High to Low</option>
       </select>
     </div>
 
