--- a/PLP.html
+++ b/PLP.html
@@ -36,43 +36,46 @@
           <p>Color</p>
           <img class="filter-arrow-btn" src="images/filter_arrow.png" alt="" />
           <div class="line"></div>
-          <input type="checkbox" id="gray" name="color" />
-          <label for="grey"> Grey</label><br />
-          <input type="checkbox" id="violet" name="color" />
-          <label for="violet"> Violet</label><br />
-          <input type="checkbox" id="black" name="color" />
-          <label for="black"> Black</label><br />
-          <input type="checkbox" id="ivory" name="color" />
-          <label for="ivory"> Ivory</label><br />
-          <input type="checkbox" id="yellow" name="color" />
-          <label for="yellow"> Yellow</label><br />
-          <input type="checkbox" id="green" name="color" />
-          <label for="green"> Green</label><br />
-          <input type="checkbox" id="tan" name="color" />
-          <label for="tan"> Tan</label><br />
-          <input type="checkbox" id="salmon" name="color" />
-          <label for="salmon"> Salmon</label><br />
-          <input type="checkbox" id="purple" name="color" />
-          <label for="purple"> Purple</label><br />
-          <input type="checkbox" id="lime" name="color" />
-          <label for="lime"> Lime</label><br />
-          <input type="checkbox" id="magenta" name="color" />
-          <label for="magenta"> Magenta</label>
+          <div class="options">
+            <input type="checkbox" id="gray" name="color" />
+            <label for="grey"> Grey</label><br />
+            <input type="checkbox" id="violet" name="color" />
+            <label for="violet"> Violet</label><br />
+            <input type="checkbox" id="black" name="color" />
+            <label for="black"> Black</label><br />
+            <input type="checkbox" id="ivory" name="color" />
+            <label for="ivory"> Ivory</label><br />
+            <input type="checkbox" id="yellow" name="color" />
+            <label for="yellow"> Yellow</label><br />
+            <input type="checkbox" id="green" name="color" />
+            <label for="green"> Green</label><br />
+            <input type="checkbox" id="tan" name="color" />
+            <label for="tan"> Tan</label><br />
+            <input type="checkbox" id="salmon" name="color" />
+            <label for="salmon"> Salmon</label><br />
+            <input type="checkbox" id="purple" name="color" />
+            <label for="purple"> Purple</label><br />
+            <input type="checkbox" id="lime" name="color" />
+            <label for="lime"> Lime</label><br />
+            <input type="checkbox" id="magenta" name="color" />
+            <label for="magenta"> Magenta</label>
+          </div>
         </div>
 
         <div class="category-filter">
           <p>Category</p>
           <img class="filter-arrow-btn" src="images/filter_arrow.png" alt="" />
           <div class="line"></div>
-
-          <input type="checkbox" id="table" name="category" />
-          <label for="table"> Table</label><br />
-          <input type="checkbox" id="sofa" name="category" />
-          <label for="sofa"> Sofa</label><br />
-          <input type="checkbox" id="chair" name="category" />
-          <label for="chair"> Chair</label><br />
-          <input type="checkbox" id="bed" name="category" />
-          <label for="bed"> Bed</label>
+          <div class="options">
+            <input type="checkbox" id="table" name="category" />
+            <label for="table"> Table</label><br />
+            <input type="checkbox" id="sofa" name="category" />
+            <label for="sofa"> Sofa</label><br />
+            <input type="checkbox" id="chair" name="category" />
+            <label for="chair"> Chair</label><br />
+            <input type="checkbox" id="bed" name="category" />
+            <label for="bed"> Bed</label>
+          </div>
         </div>
         <div class="line"></div>
         <div class="price-filter">
