changes for cart

--- a/PLP.html
+++ b/PLP.html
@@ -78,7 +78,7 @@
           </div>
         </div>
 
-        <section class="range-slider">
+        <div class="slider-container">
           <input
             value="0"
             min="0"
@@ -97,7 +97,7 @@
           />
           <span class="slider-min-text"></span>
           <span class="slider-max-text"></span>
-        </section>
+        </div>
 
         <!-- <div class="price-filter">
           <p>Price Range</p>
@@ -121,7 +121,7 @@
             <img
               class="product-image"
               src="images/product-image-1.jpg"
-              alt="picture of a bedroom"
+              alt=""
             />
             <div class="product-info">
               <div class="product-name">
