slider partial styling

--- a/PLP.html
+++ b/PLP.html
@@ -85,7 +85,7 @@
             max="1000"
             step="10"
             type="range"
-            class="slider-min"
+            class="slider-min myslider"
           />
           <input
             value="1000"
@@ -93,7 +93,7 @@
             max="1000"
             step="10"
             type="range"
-            class="slider-max"
+            class="slider-max myslider"
           />
           <span class="slider-min-text"></span>
           <span class="slider-max-text"></span>
