changes in slider

--- a/PLP.html
+++ b/PLP.html
@@ -78,7 +78,8 @@
           </div>
         </div>
 
-        <div class="slider-container">
+        <div class="slider-container price-filter">
+          <p>Price Range</p>
           <input
             value="0"
             min="0"
