button changes in pdp.js and css

--- a/PDP.html
+++ b/PDP.html
@@ -47,10 +47,10 @@
           <div class="pdp-buttons">
             <button class="pdp-add-to-cart-button">Add to basket</button>
             <div class="pdp-details">
-              <button class="pdp-details-button">
+              <button class="pdp-details-button expandButton">
                 Details
               </button>
-              <ul class="pdp-details-text pdp-smaller-text">
+              <ul class="pdp-details-text pdp-smaller-text expandable">
                 <li>Dimensions</li>
                 <li>Seat dimensions</li>
                 <li>Weight</li>
