--- a/PLP.html
+++ b/PLP.html
@@ -34,9 +34,13 @@
         <div class="line"></div>
         <div class="color-filter">
           <p>Color</p>
-          <img class="filter-arrow-btn" src="images/filter_arrow.png" alt="" />
+          <img
+            class="filter-arrow-btn expandButton"
+            src="images/filter_arrow.png"
+            alt=""
+          />
           <div class="line"></div>
-          <div class="options">
+          <div class="options expandable">
             <input type="checkbox" id="grey" name="color" />
             <label for="grey"> Grey</label><br />
             <input type="checkbox" id="violet" name="color" />
@@ -64,9 +68,13 @@
 
         <div class="category-filter">
           <p>Category</p>
-          <img class="filter-arrow-btn" src="images/filter_arrow.png" alt="" />
+          <img
+            class="filter-arrow-btn expandButton"
+            src="images/filter_arrow.png"
+            alt=""
+          />
           <div class="line"></div>
-          <div class="options">
+          <div class="options expandable">
             <input type="checkbox" id="Table" name="category" />
             <label for="Table"> Table</label><br />
             <input type="checkbox" id="Sofa" name="category" />
