--- a/main_page.html
+++ b/main_page.html
@@ -24,21 +24,26 @@
       </div>
 
       <!-- Main image carousel part-->
-      <div class="carousel-container">
+      <div class="carousel-container slideshow">
         <div class="carousel">
-          <img
-            class="carousel-image first-image"
-            src="images/sofa-184555_1920.jpg"
-            alt=""
-          />
-          <!-- <img class="carousel-image" src="images/couch2.png" alt="" /> -->
+          <div class="slide slide-visible">
+            <img src="images/home1.jpg" alt="" />
+          </div>
+          <div class="slide slide-hidden">
+            <img src="images/home2.jpg" alt="" />
+          </div>
+          <div class="slide slide-hidden">
+            <img src="images/home3.jpg" alt="" />
+          </div>
+          <div class="slide slide-hidden">
+            <img src="images/home4.jpg" alt="" />
+          </div>
           <div class="carousel-text">
             <h1>CREATE YOUR CALM</h1>
             <p>Relax right here</p>
           </div>
-
-          <div class="carousel-button right"></div>
-          <div class="carousel-button left"></div>
+          <div class="carousel-button slide-next">R</div>
+          <div class="carousel-button slide-previous">L</div>
         </div>
       </div>
 
