--- a/PDP.html
+++ b/PDP.html
@@ -12,17 +12,44 @@
 
     <main class="main-pdp">
       <div class="pdp-wrapper">
-        <div class="pdp-images-container">
+        <div class="pdp-images-container slideshow">
           <div class="pdp-carousel">
-            <img src="images/PDP-sofa.jpg" />
+            <img src="images/PDP1.jpg" class="slide slide-visible" />
+            <img src="images/PDP2.jpg" class="slide slide-hidden" />
+            <img src="images/PDP3.jpg" class="slide slide-hidden" />
+            <img src="images/PDP4.jpg" class="slide slide-hidden" />
           </div>
           <div class="pdp-small-images">
-            <img class="pdp-arrow" src="./images/arrow-left.png" alt="" />
-            <img src="./images/pdp-small-couch-1.png" alt="" />
-            <img src="./images/pdp-small-couch-2.png" alt="" />
-            <img src="./images/pdp-small-couch-3.png" alt="" />
-            <img src="./images/pdp-small-couch-4.png" alt="" />
-            <img class="pdp-arrow" src="./images/arrow-right.png" alt="" />
+            <img
+              class="pdp-arrow slide-previous"
+              src="./images/arrow-left.png"
+              alt=""
+            />
+            <img
+              src="./images/pdp-small-couch-1.png"
+              alt=""
+              class="slide-next"
+            />
+            <img
+              src="./images/pdp-small-couch-2.png"
+              alt=""
+              class="slide-next"
+            />
+            <img
+              src="./images/pdp-small-couch-3.png"
+              alt=""
+              class="slide-next"
+            />
+            <img
+              src="./images/pdp-small-couch-4.png"
+              alt=""
+              class="slide-next"
+            />
+            <img
+              class="pdp-arrow slide-next"
+              src="./images/arrow-right.png"
+              alt=""
+            />
           </div>
         </div>
         <div class="pdp-product-description">
