--- a/main_page.html
+++ b/main_page.html
@@ -42,8 +42,12 @@
             <h1>CREATE YOUR CALM</h1>
             <p>Relax right here</p>
           </div>
-          <div class="carousel-button slide-next">R</div>
-          <div class="carousel-button slide-previous">L</div>
+          <div class="carousel-button slide-next hidden">
+            <img src="images/arrow-white-right.png" class="next" />
+          </div>
+          <div class="carousel-button slide-previous hidden">
+            <img src="images/arrow-white-left.png" />
+          </div>
         </div>
       </div>
 
