mobile changes plp

--- a/PLP.html
+++ b/PLP.html
@@ -128,11 +128,12 @@
         <div class="products">
           <!-- product -->
           <div class="product template">
-            <img
-              class="product-image"
-              src="images/product-image-1.jpg"
-              alt=""
-            />
+            <a href="./PDP.html"
+              ><img
+                class="product-image"
+                src="images/product-image-1.jpg"
+                alt=""
+            /></a>
             <div class="product-info">
               <div class="product-name">
                 <h4>Druid</h4>
