plp mobile almost done

--- a/PLP.html
+++ b/PLP.html
@@ -11,12 +11,12 @@
   <body>
     <header></header>
 
-    <div class="inputs">
+    <div class="inputs plp-inputs-mobile">
       <label for="search"></label>
       <input type="text" id="search" />
 
       <label for="sorting"></label>
-      <select id="sorting">
+      <select id="sorting" class="plp-mobile-sorting">
         <option value="best-match">Best Match</option>
         <option value="low-to-high">Low to High</option>
         <option value="high-to-low">High to Low</option>
