--- a/main_page.html
+++ b/main_page.html
@@ -17,7 +17,7 @@
         <input type="text" id="search" />
 
         <label for="sorting"></label>
-        <select id="sorting">
+        <select id="sorting" class="main-no-sorting-mobile">
           <option>Best Match</option>
           <option>Low to High</option>
           <option>High to Low</option>
