mobile nav-menu

--- a/PDP.html
+++ b/PDP.html
@@ -20,6 +20,11 @@
             <img src="images/PDP3.jpg" class="slide slide-hidden" />
             <img src="images/PDP4.jpg" class="slide slide-hidden" />
           </div>
+          <div class="mobile-only">
+            <div class="slide-next mini mini1"></div>
+            <div class="slide-next mini"></div>
+            <div class="slide-next mini"></div>
+          </div>
           <div class="pdp-small-images">
             <img
               class="pdp-arrow slide-previous"
@@ -79,12 +84,12 @@
                 Details
               </button>
               <ul class="pdp-details-text pdp-smaller-text expandable">
-                <li>Dimensions</li>
-                <li>Seat dimensions</li>
-                <li>Weight</li>
-                <li>Materials</li>
-                <li>Filling materials</li>
-                <li>Comfort level</li>
+                <li>- Dimensions: W: 18cm, H: 120cm, D: 247cm</li>
+                <li>- Seat dimensions: W: 119cm, H: 23cm, D: 62cm</li>
+                <li>- Weight: 25kg</li>
+                <li>- Materials: rubber, cotton</li>
+                <li>- Filling materials: concrete, rubber, cotton, fresh</li>
+                <li>- Comfort level: firm</li>
               </ul>
             </div>
           </div>
