--- a/PLP.html
+++ b/PLP.html
@@ -133,7 +133,7 @@
         <div class="products">
           <!-- product -->
           <div class="product template">
-            <a href="./PDP.html"
+            <a href="PDP.html"
               ><img
                 class="product-image"
                 src="images/product-image-1.jpg"
